fix some issues on mobile

--- a/frontend/src/components/Hero/Hero.module.css
+++ b/frontend/src/components/Hero/Hero.module.css
@@ -11,7 +11,7 @@
   font-weight: bold;
 }
 .hero label {
-  margin-right: 1rem;
+  
   font-weight: bold;
   color: var(--txt-main);
 }
@@ -51,6 +51,7 @@
 }
 
 .filter {
+  gap: 0.5rem;
   display: flex;
   justify-content: center;
   flex-direction: row;
